# llm_estimate_lrs

./: .env.example  .gitignore  2025-9-22 locke m2int lab LLM LRs.pptx  4o-mini loa.csv  83 Key Features for ChatBot API Entropy Calculations Across an Interview.xlsx  AGENTS.md  CITATION.cff  CLAUDE.md  Copy of NNT_LRs_PC_06.07.2025.xlsx  LOA tables.docx  NNT_LRs_08-26-2025.xlsx  README.md  additional_requested_analyses.ipynb  data_analysis.ipynb  example_template.xlsx  llms.txt  lr_scraper_estimator.ipynb  new_NNT_LRs_07.08.2025.xlsx  new_NNT_LRs_08-23-2025.xlsx  new_nnt_lrs_processed.xlsx  nnt_lrs.xlsx  nnt_lrs_processed.xlsx  nnt_lrs_sans_number.xlsx  nnt_lrs_with_estimated.xlsx  pyproject.toml  reviewer1_followup_analyses.ipynb  reviewer2_threshold_perturbation_analysis.ipynb  threshold_perturbation_sensitivity_analysis.ipynb
Paper/: 2025-08-24 PC Edits AI-Predicted Medical Diagnostic Likelihood Ratios.docx  2025-08-27 BL AI-Predicted Medical Diagnostic Likelihood Ratios.docx  2025-08-28 BL AI-Predicted Medical Diagnostic Likelihood Ratios.docx  2025-08-29 CJR AI-Predicted Medical Diagnostic Likelihood Ratios NEJM AI.docx  2025-09-05 PC AI-Predicted Medical Diagnostic Likelihood Ratios NEJM AI.docx  2025-09-16 AI-Predicted Medical Diagnostic Likelihood Ratios.docx  2025-09-19 AI-Predicted Medical Diagnostic Likelihood Ratios.docx  2025-10-17 Cover Letter LR.docx  2025-6-19 BL Edits AI-Predicted Medical Diagnostic Likelihood Ratios.docx  2025-7-29 BL Edits AI-Predicted Medical Diagnostic Likelihood Ratios.docx  Discussion Draft.docx  Doc1.docx  (+7 more)
(+24 files in other folders)
