[project]
name = "llm-estimate-lrs"
version = "0.1.0"
description = "Estimate diagnostic likelihood ratios with LLMs and assess agreement with literature."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.11",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "scikit-learn>=1.4",
  "statsmodels>=0.14",
  "pingouin>=0.5",
  "scienceplots>=2.1",
  "krippendorff>=0.6",
  "python-docx>=1.0",
  "openpyxl>=3.1",
  "python-dotenv>=1.0",
  "pydantic>=2.7",
  "openai>=1.50",
  "papermill>=2.5",
  "jupyterlab>=4.2",
  "ipykernel>=6.29",
  "pillow>=10.0",         # for high-DPI TIFF export
  "beautifulsoup4>=4.12", # if scraping helpers are used
  "requests>=2.31"
]

[tool.uv]
dev-dependencies = [
  "ruff>=0.5",
  "black>=24.4",
  "pre-commit>=3.7"
]